@@ -13,6 +13,7 @@ from tryton.common.popup_menu import populate
 from tryton.common.completion import get_completion, update_completion
 from tryton.common.entry_position import reset_position
 from tryton.common.domain_parser import quote
+from tryton.common.widget_style import set_widget_style
 from tryton.config import CONFIG
 
 _ = gettext.gettext
@@ -61,6 +62,7 @@ class Many2One(Widget):
 
     def _set_button_sensitive(self):
         self.wid_text.set_editable(not self._readonly)
+        set_widget_style(self.wid_text, not self._readonly)
         self.wid_text.set_icon_sensitive(
             gtk.ENTRY_ICON_PRIMARY, self.read_access)
         self.wid_text.set_icon_sensitive(
